# Aster

./: .gitignore  AGENTS.md  AUDIT_REPORT.md  Cargo.toml  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-Hant.md  _zh_k.txt
.cargo/: config.toml
.github/workflows/: core.yml  nightly.yml  release.yml
.kiro/specs/aster-p1-p2-milestones/: .config.kiro  requirements.md
.reasonix/truncated-results/: 1780153320466-f531c967-run_command.txt  1780153538084-799407e9-run_command.txt
crates/engine-agent-cluster/: Cargo.toml
crates/engine-agent-cluster/src/: bundle.rs  lib.rs  manager.rs  protocol.rs  reviewer.rs  worker.rs
crates/engine-ai/: Cargo.toml
crates/engine-ai/src/: copilot.rs  kernel.rs  lib.rs  parser.rs  providers.rs  registry.rs  system_prompt.rs  system_prompt_base.txt  tool_runtime.rs
crates/engine-animation/: Cargo.toml
crates/engine-animation/src/: lib.rs
crates/engine-assets/: Cargo.toml
crates/engine-assets/src/: database.rs  error.rs  ids.rs  import.rs  import_payload.rs  lib.rs  manifest.rs  mesh_builder.rs  prelude.rs  resource_types.rs  resources.rs  runtime_registry.rs  tests.rs  vmodel.rs  watch.rs
crates/engine-assets/tests/: importer_fixtures.rs
crates/engine-assets/tests/fixtures/: invalid.gltf  valid.gltf
crates/engine-audio/: Cargo.toml
crates/engine-audio/src/: bus.rs  device.rs  effects.rs  lib.rs  renderer.rs  spatial.rs  stream.rs  types.rs
crates/engine-cli/: Cargo.toml
crates/engine-cli/src/: main.rs
crates/engine-cli/tests/: build_command.rs
crates/engine-core/: Cargo.toml
crates/engine-core/src/: config.rs  error.rs  handle.rs  ids.rs  lib.rs  logging.rs  math.rs  task.rs  time.rs
crates/engine-ecs/: Cargo.toml
crates/engine-ecs/src/: audio.rs  lib.rs  particle.rs  patch.rs  physics.rs  scene.rs  schema.rs  transform.rs  world.rs
crates/engine-ecs/tests/: scene_serialization.rs
crates/engine-editor/: Cargo.toml
crates/engine-editor-ui/: Cargo.toml
crates/engine-editor-ui/src/: fonts.rs  hub.rs  lib.rs  shell.rs
crates/engine-editor-ui/tests/: editor_panels.rs  editor_state.rs
crates/engine-editor/src/: agent.rs  lib.rs  memory.rs  native.rs  physics.rs  render.rs  ui_state.rs
crates/engine-i18n/locales/: en.toml  es.toml  ja.toml  ko.toml  zh.toml  zh_hant.toml
crates/engine-i18n/src/: lib.rs
crates/engine-packager/: Cargo.toml
crates/engine-packager/src/: lib.rs
crates/engine-physics/: Cargo.toml
crates/engine-physics/examples/: stress_benchmark.rs
crates/engine-platform/: Cargo.toml
crates/engine-policy/: Cargo.toml
crates/engine-quest/: Cargo.toml
crates/engine-quest/src/: lib.rs  runtime.rs
crates/engine-render/: Cargo.toml
crates/engine-render-2d/: Cargo.toml
crates/engine-render-vulkan/: Cargo.toml
crates/engine-render-vulkan/src/: lib.rs  vk.rs
crates/engine-render-wgpu/: Cargo.toml
crates/engine-script-declarative/: Cargo.toml
crates/engine-script-declarative/examples/: export_schema.rs  simple_test.rs
crates/engine-script-declarative/src/: action.rs  compiler.rs  condition.rs  lib.rs  presets.rs  runtime.rs  schema.rs
crates/engine-script-rhai/: Cargo.toml
crates/engine-script-varg/: Cargo.toml
crates/engine-shader/: Cargo.toml
crates/engine-skeleton/: Cargo.toml
crates/engine-ui/: Cargo.toml
crates/runtime-min/: Cargo.toml
doc/: rust-engine-task-index.md  task-00-project-decisions.md  task-01-workspace-core.md  task-02-scene-ecs-project-model.md  task-03-assets-resources.md  task-04-rendering-backend.md  task-05-physics-audio-editor.md  task-06-agent-tools.md  task-07-build-packaging-ci.md  task-08-testing-performance-acceptance.md  task-09-release-docs.md
docs/: AI_EDITOR_TAKEOVER_SHOWCASE_2026-06-22.md  OTHER_AI_GOAL_MODE_HANDOFF.md  ai-agent-unified-spec.md  ai-editor-copilot-prd.md  ai-editor-quest-prd.md  ai-native-engine-loop-comparison.md  ai-native-engine-loop-progress.md  editor-viewport-zero-copy-plan.md  game-making-impact-requirements.md  object-audio-acoustics-prd.md  physics-engine-upgrade-design.md  quest-workflow-ui-reference.md  render-upscaling-frame-generation-prd.md  runtime-performance.md  slint-editor-migration-evaluation.md  ui-design-guidelines.md  varg-language-family-spec.md  varg_loops_implementation.md  varg_parsing_verification.md
docs/adr/: 0001-editor-viewport-presentation.md  0002-varg-script-system-unreal-reference.md
docs/ai-native-engine-loop-target/: CLAUDE_CODE_RUN_STYLE.md  CLOUD_BRANCH_REFERENCE.md  FULL_TARGET_PROMPT.md  GOAL_PROMPT.txt  QUEST_REAL_EXECUTION_PROMPT.md  START_HERE.md
docs/quest-real-execution-hardening-target/: CHECKLIST.md  FULL_TARGET_PROMPT.md  GOAL_PROMPT.txt  HANDOFF_RULES.md  RUN_REPORT_TEMPLATE.md  START_HERE.md
docs/strong-commander-keypool-branch/: GOAL_PROMPT.txt  IMPLEMENTATION_PROMPT.md  KEYPOOL_ROUTER_SPEC.md  PRODUCT_ARCHITECTURE.md  RESEARCH_SYNTHESIS.md  ROADMAP.md  START_HERE.md
editor/: package-lock.json  package.json  tsconfig.json  vite.config.ts
editor-slint/: Cargo.toml
editor-slint/src/: main.rs
editor-slint/ui/: app.slint
editor/src-tauri/: Cargo.toml  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/icons/: icon.icns
editor/src-tauri/linux/: com.aster.editor.desktop
editor/src-tauri/src/: app.rs  editor_compositor.rs  game_window.rs  lib.rs  main.rs  native_host_window.rs  native_panel_host.rs  quest.rs  scene_window.rs  wayland_embedded_compositor.rs
editor/src-tauri/src/commands/: copilot.rs  dialogs.rs  rpc.rs
editor/src-tauri/src/host/: copilot.rs  project.rs  quest.rs  runtime.rs
editor/src-tauri/tests/: editor_host_rpc.rs
examples/behaviors/: README.md
examples/project/: Varg.toml  aster.project.toml  build.runtime-min.toml
examples/scripts/: loop_demo.varg  particle_system.varg  timed_sequence.varg  wave_spawner.varg  weapon_cooldown.varg
schema/: varg-behavior-schema.json
scripts/: build-editor.sh  dev-editor-slint.sh  dev-editor.sh  install-linux-dev-desktop-entry.sh  tauri-dev.sh
scripts/ralph/: progress.txt
xtask/: Cargo.toml
xtask/src/: main.rs
(+164 files in other folders)
