[package]
name = "engine-packager"
description = "Varg project build and package pipeline"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-assets = { workspace = true, default-features = false }
engine-core.workspace = true
engine-ecs.workspace = true
runtime-min.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile = "3"
