[package]
name = "engine-render-vulkan"
description = "Aster Vulkan rendering backend"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = []
vulkan = ["dep:ash", "dep:gpu-allocator", "dep:raw-window-handle"]
runtime-min = ["engine-render/runtime-min"]
runtime-game = ["runtime-min"]
editor = ["engine-render/editor"]
agent-tools = ["engine-render/agent-tools"]
script-python = ["engine-render/script-python"]
dev-full = ["runtime-game", "editor", "agent-tools", "script-python"]

[dependencies]
engine-core.workspace = true
engine-render.workspace = true
thiserror.workspace = true
tracing.workspace = true

ash = { version = "0.38", optional = true }
gpu-allocator = { version = "0.27", optional = true }
raw-window-handle = { version = "0.6", optional = true }
