[package]
name = "aster-editor-tauri"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
default-run = "aster-editor-tauri"

[lib]
name = "aster_editor_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
serde.workspace = true
serde_json.workspace = true

image = { workspace = true, default-features = false, features = ["png"] }

engine-core.workspace = true
engine-ecs.workspace = true
engine-editor.workspace = true
engine-i18n.workspace = true
engine-render.workspace = true
engine-render-wgpu.workspace = true
engine-assets.workspace = true
runtime-min = { workspace = true, features = ["editor", "wgpu", "physics", "script-rhai"] }
tauri-plugin-dialog = "2"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.12.3", default-features = false, features = ["tokio"] }

[dev-dependencies]
tempfile = "3"
